--- a/index.html
+++ b/index.html
@@ -16,42 +16,42 @@
 <nav>
     <div class="nav1">
         <p>太原</p>
-        <img src="../image/001.png" alt="">
+        <img src="./image/001.png" alt="">
     </div>
     <div class="nav2">
         <p>搜索您需要的服务 商品</p>
         <a href="">
-            <img src="../image/003.png" alt="">
+            <img src="./image/003.png" alt="">
         </a>
     </div>
 </nav>
 <div class="img1">
-    <img src="../image/banner.png" alt="">
+    <img src="./image/banner.png" alt="">
 </div>
 <div class="gn">
     <ul>
-        <li><a href=""><img src="../image/l1.png" alt="">
+        <li><a href=""><img src="./image/l1.png" alt="">
             <p>水路综合</p>
         </a></li>
-        <li><a href=""><img src="../image/l2.png" alt="">
+        <li><a href=""><img src="./image/l2.png" alt="">
             <p>水管维修</p>
         </a></li>
-        <li><a href=""><img src="../image/l3.png" alt="">
+        <li><a href=""><img src="./image/l3.png" alt="">
             <p>管道维修</p>
         </a></li>
-        <li><a href=""><img src="../image/l4.png" alt="">
+        <li><a href=""><img src="./image/l4.png" alt="">
             <p>龙头维修</p>
         </a></li>
-        <li><a href=""><img src="../image/l5.png" alt="">
+        <li><a href=""><img src="./image/l5.png" alt="">
             <p>地漏疏通</p>
         </a></li>
-        <li><a href=""><img src="../image/l6.png" alt="">
+        <li><a href=""><img src="./image/l6.png" alt="">
             <p>阀门维修</p>
         </a></li>
-        <li><a href=""><img src="../image/l7.png" alt="">
+        <li><a href=""><img src="./image/l7.png" alt="">
             <p>下水道疏通</p>
         </a></li>
-        <li><a href=""><img src="../image/l8.png" alt="">
+        <li><a href=""><img src="./image/l8.png" alt="">
             <p>其他</p>
         </a></li>
         <li><a href=""><img src="" alt="">
@@ -61,19 +61,19 @@
 </div>
 <div class="end">
     <ul>
-        <li><a href=""><img src="../image/sy.png" alt="">
+        <li><a href=""><img src="./image/sy.png" alt="">
             <p>首页</p>
         </a></li>
-        <li><a href=""><img src="../image/store.png" alt="">
+        <li><a href=""><img src="./image/store.png" alt="">
             <p>商城</p>
         </a></li>
-        <li><a href=""><img src="../image/rz.png" alt="">
+        <li><a href=""><img src="./image/rz.png" alt="">
             <p>入驻</p>
         </a></li>
-        <li><a href=""><img src="../image/order.png" alt="">
+        <li><a href=""><img src="./image/order.png" alt="">
             <p>订单</p>
         </a></li>
-        <li><a href=""><img src="../image/personal.png" alt="">
+        <li><a href=""><img src="./image/personal.png" alt="">
             <p>我的</p>
         </a></li>
     </ul>
