--- a/slzh.html
+++ b/slzh.html
@@ -11,66 +11,81 @@
 </head>
 <body>
 <header>
-    <a href=""><img src="" alt=""></a>
-    <p>水路综合</p>
+    <a href=""><img src="./image/xiangzuo.png" alt=""></a>
+    <span>水路综合</span>
     <a href=""></a>
 </header>
 <nav>
-    <ul>
-        <li><p>综合</p><img src="../image/001.png" alt=""></li>
-        <li><p>销量</p><img src="../image/001.png" alt=""></li>
-        <li><p>价格降序</p><img src="../image/001.png" alt=""></li>
-    </ul>
+    <div class="nav1">
+        <span>太原</span>
+        <img src="./image/001.png" alt="">
+    </div>
+    <div class="nav2">
+        <span>销量</span>
+        <img src="./image/001.png" alt="">
+    </div>
+    <div class="nav2">
+        <span>价格降序</span>
+        <img src="./image/001.png" alt="">
+    </div>
 </nav>
-<ul>
-    <li>
-        <a href="">
-            <div class="left">
-                <img src="../image/l1.png" alt="">
-            </div>
-            <div class="right">
-                <h1>龙头维修</h1>
-                <div class="one">
-                    <span>评分<strong>5.0</strong></span>
-                    <span>接单率<strong>100%</strong></span>
-                </div>
-                <div class="two">
-                    
+<div class="middle">
+    <div class="one">
+        <div class="left">
+            <img src="./image/104.png" alt="">
+        </div>
+        <div class="right"></div>
+    </div>
+</div>
+<!--<ul>-->
+<!--    <li>-->
+<!--        <a href="">-->
+<!--            <div class="left">-->
+<!--                <img src="../image/l1.png" alt="">-->
+<!--            </div>-->
+<!--            <div class="right">-->
+<!--                <h1>龙头维修</h1>-->
+<!--                <div class="one">-->
+<!--                    <span>评分<strong>5.0</strong></span>-->
+<!--                    <span>接单率<strong>100%</strong></span>-->
+<!--                </div>-->
+<!--                <div class="two">-->
+<!--                    -->
 
-                </div>
-                <div class="three">已售100</div>
-                <div class="four">60元</div>
-            </div>
-        </a>
-    </li>
-    <li><a href="">
-        <div class="left">
-            <img src="../image/l1.png" alt="">
-        </div>
-        <div class="right">
-            <h1>龙头维修</h1>
-            <div class="one">
-            </div>
-            <div class="two">
-            </div>
-            <div class="three">已售100</div>
-            <div class="four">60元</div>
-        </div>
-    </a></li>
-    <li><a href="">
-        <div class="left">
-            <img src="../image/l1.png" alt="">
-        </div>
-        <div class="right">
-            <h1>龙头维修</h1>
-            <div class="one">
-            </div>
-            <div class="two">
-            </div>
-            <div class="three">已售100</div>
-            <div class="four">60元</div>
-        </div>
-    </a></li>
-</ul>
+<!--                </div>-->
+<!--                <div class="three">已售100</div>-->
+<!--                <div class="four">60元</div>-->
+<!--            </div>-->
+<!--        </a>-->
+<!--    </li>-->
+<!--    <li><a href="">-->
+<!--        <div class="left">-->
+<!--            <img src="../image/l1.png" alt="">-->
+<!--        </div>-->
+<!--        <div class="right">-->
+<!--            <h1>龙头维修</h1>-->
+<!--            <div class="one">-->
+<!--            </div>-->
+<!--            <div class="two">-->
+<!--            </div>-->
+<!--            <div class="three">已售100</div>-->
+<!--            <div class="four">60元</div>-->
+<!--        </div>-->
+<!--    </a></li>-->
+<!--    <li><a href="">-->
+<!--        <div class="left">-->
+<!--            <img src="../image/l1.png" alt="">-->
+<!--        </div>-->
+<!--        <div class="right">-->
+<!--            <h1>龙头维修</h1>-->
+<!--            <div class="one">-->
+<!--            </div>-->
+<!--            <div class="two">-->
+<!--            </div>-->
+<!--            <div class="three">已售100</div>-->
+<!--            <div class="four">60元</div>-->
+<!--        </div>-->
+<!--    </a></li>-->
+<!--</ul>-->
 </body>
 </html>
