--- a/spxq.html
+++ b/spxq.html
@@ -30,33 +30,67 @@
         <span class="span-three"> 上门服务</span>
         <span class="span-five">278</span>
         <span class="span-four">月售</span>
-    </span>
-    <div class="welfare">
-        <a href=""><img src="../image/ticket.png" alt=""><span>领券</span></a>
-        <div class="welfare-three"><span>满500减50</span></div>
-    </div>
-    <div class="additional">
-        <span>无额外收费</span>
-        <span>爽约包赔</span>
-        <span>不满意重新服务</span>
-    </div>
-    <div class="the-end">
-        <div class="end-header">
-            <h1>用户<span>评价</span></h1>
-            <div class="end-header-right"><span>查看全部</span><img src="./image/xiangyou.png" alt=""><img src="./image/xiangyou.png" alt=""></div>
+        <div class="welfare">
+            <a href=""><img src="../image/ticket.png" alt=""><span>领券</span></a>
+            <div class="welfare-three"><span>满500减50</span></div>
         </div>
-        <div class="end-two">
-            <div class="end-two-left">
-                <img src="" alt="">
-            </div>
-            <div class="end-two-right">
-                <div><span>用户名</span><img src="" alt=""><img src="" alt=""><span>2018-06-08</span></div>
-                <span>服务专业，商家细节做得特别好，准时到达</span>
-                <span>北京&nbsp;&nbsp;海淀区&nbsp;&nbsp;四双跑步鞋清理</span>
-            </div>
+        <div class="additional">
+            <span>无额外收费</span>
+            <span>爽约包赔</span>
+            <span>不满意重新服务</span>
         </div>
-        </p>
+        <div class="the-end">
+            <div class="end-header">
+                <h1>用户<span>评价</span></h1>
+                <div class="end-header-right"><span>查看全部</span><img src="./image/xiangyou.png" alt=""><img
+                        src="./image/xiangyou.png" alt=""></div>
+            </div>
+            <div class="end-two">
+                <div class="end-two-left">
+                    <img src="./image/head.png" alt="">
+                </div>
+                <div class="end-two-right">
+                    <div><span>用户名</span><img src="./image/star1.png" alt=""><img src="./image/star1.png" alt=""><img src="./image/star1.png" alt=""><img src="./image/star2.png" alt=""><img src="./image/star2.png" alt=""><span>2018-06-08</span></div>
+                    <span>服务专业，商家细节做得特别好，准时到达</span>
+                    <span>北京&nbsp;&nbsp;海淀区&nbsp;&nbsp;四双跑步鞋清理</span>
+                </div>
+            </div>
+            <div class="end-two">
+                <div class="end-two-left">
+                    <img src="./image/head.png" alt="">
+                </div>
+                <div class="end-two-right">
+                    <div><span>用户名</span><img src="./image/star1.png" alt=""><img src="./image/star1.png" alt=""><img src="./image/star1.png" alt=""><img src="./image/star2.png" alt=""><img src="./image/star2.png" alt=""><span>2018-06-08</span></div>
+                    <span>服务专业，商家细节做得特别好，准时到达</span>
+                    <span>北京&nbsp;&nbsp;海淀区&nbsp;&nbsp;四双跑步鞋清理</span>
+
+                </div>
+            </div>
+            </p>
+            <div class="end-header">
+                <h1 style="color:#35db82">商品<span>详情</span></h1>
+            </div>
+            <div class="end-header">
+                <h1 style="color:#35db82">相似<span>推荐</span></h1>
+            </div>
+            <ul>
+                <li><img src="./image/005.png" alt=""><span>潜水艇高端龙头</span><span>60元</span></li>
+                <li><img src="./image/005.png" alt=""><span>潜水艇高端龙头</span><span>60元</span></li>
+                <li><img src="./image/005.png" alt=""><span>潜水艇高端龙头</span><span>60元</span></li>
+                <li><img src="./image/005.png" alt=""><span>潜水艇高端龙头</span><span>60元</span></li>
+                <li><img src="./image/005.png" alt=""><span>潜水艇高端龙头</span><span>60元</span></li>
+                <li><img src="./image/005.png" alt=""><span>潜水艇高端龙头</span><span>60元</span></li>
+            </ul>
+        </div>
     </div>
 </nav>
+<footer>
+    <ul>
+        <li><img src="./image/007.png" alt=""><span>商铺</span></li>
+        <li><img src="./image/008.png" alt=""><span>联系商家</span></li>
+        <li><img src="./image/102.png" alt=""></li>
+        <li><img src="./image/101.png" alt=""></li>
+    </ul>
+</footer>
 </body>
 </html>
