--- a/spxq.html
+++ b/spxq.html
@@ -17,7 +17,7 @@
 </header>
 <nav>
     <div class="div-img">
-        <img src="../image/1010.png" alt="">
+        <img src="./image/1010.png" alt="">
     </div>
     <div class="narrate">
         <h1>
@@ -31,7 +31,7 @@
         <span class="span-five">278</span>
         <span class="span-four">月售</span>
         <div class="welfare">
-            <a href=""><img src="../image/ticket.png" alt=""><span>领券</span></a>
+            <a href=""><img src="./image/ticket.png" alt=""><span>领券</span></a>
             <div class="welfare-three"><span>满500减50</span></div>
         </div>
         <div class="additional">
