--- a/slzh.html
+++ b/slzh.html
@@ -34,58 +34,21 @@
         <div class="left">
             <img src="./image/104.png" alt="">
         </div>
-        <div class="right"></div>
+        <div class="right">
+            <h2>龙头维修</h2>
+            <div class="right-one">
+                <ul>
+                    <li>评分<span>5.0</span></li>
+                    <li>接单率<span>100%</span></li>
+                </ul>
+            </div>
+            <div class="right-two">
+                <div><span>非常专业</span></div>
+                <div><span>价格合理</span></div>
+            </div>
+        </div>
     </div>
 </div>
-<!--<ul>-->
-<!--    <li>-->
-<!--        <a href="">-->
-<!--            <div class="left">-->
-<!--                <img src="../image/l1.png" alt="">-->
-<!--            </div>-->
-<!--            <div class="right">-->
-<!--                <h1>龙头维修</h1>-->
-<!--                <div class="one">-->
-<!--                    <span>评分<strong>5.0</strong></span>-->
-<!--                    <span>接单率<strong>100%</strong></span>-->
-<!--                </div>-->
-<!--                <div class="two">-->
-<!--                    -->
 
-<!--                </div>-->
-<!--                <div class="three">已售100</div>-->
-<!--                <div class="four">60元</div>-->
-<!--            </div>-->
-<!--        </a>-->
-<!--    </li>-->
-<!--    <li><a href="">-->
-<!--        <div class="left">-->
-<!--            <img src="../image/l1.png" alt="">-->
-<!--        </div>-->
-<!--        <div class="right">-->
-<!--            <h1>龙头维修</h1>-->
-<!--            <div class="one">-->
-<!--            </div>-->
-<!--            <div class="two">-->
-<!--            </div>-->
-<!--            <div class="three">已售100</div>-->
-<!--            <div class="four">60元</div>-->
-<!--        </div>-->
-<!--    </a></li>-->
-<!--    <li><a href="">-->
-<!--        <div class="left">-->
-<!--            <img src="../image/l1.png" alt="">-->
-<!--        </div>-->
-<!--        <div class="right">-->
-<!--            <h1>龙头维修</h1>-->
-<!--            <div class="one">-->
-<!--            </div>-->
-<!--            <div class="two">-->
-<!--            </div>-->
-<!--            <div class="three">已售100</div>-->
-<!--            <div class="four">60元</div>-->
-<!--        </div>-->
-<!--    </a></li>-->
-<!--</ul>-->
 </body>
 </html>
