--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
     </div>
     <div class="nav2">
         <p>搜索您需要的服务 商品</p>
-        <a href="">
-            <img src="./image/003.png" alt="">
+        <a href="./sousuo.html">
+            <img src="./image/sousuo.png" alt="">
         </a>
     </div>
 </nav>
@@ -30,7 +30,7 @@
 </div>
 <div class="gn">
     <ul>
-        <li><a href=""><img src="./image/l1.png" alt="">
+        <li><a href="./slzh.html"><img src="./image/l1.png" alt="">
             <p>水路综合</p>
         </a></li>
         <li><a href=""><img src="./image/l2.png" alt="">
@@ -39,7 +39,7 @@
         <li><a href=""><img src="./image/l3.png" alt="">
             <p>管道维修</p>
         </a></li>
-        <li><a href=""><img src="./image/l4.png" alt="">
+        <li><a href="./sscg.html"><img src="./image/l4.png" alt="">
             <p>龙头维修</p>
         </a></li>
         <li><a href=""><img src="./image/l5.png" alt="">
@@ -64,7 +64,7 @@
         <li><a href=""><img src="./image/sy.png" alt="">
             <p>首页</p>
         </a></li>
-        <li><a href=""><img src="./image/store.png" alt="">
+        <li><a href="./dianpu.html"><img src="./image/store.png" alt="">
             <p>商城</p>
         </a></li>
         <li><a href=""><img src="./image/rz.png" alt="">
@@ -73,7 +73,7 @@
         <li><a href=""><img src="./image/order.png" alt="">
             <p>订单</p>
         </a></li>
-        <li><a href=""><img src="./image/personal.png" alt="">
+        <li><a href="./personal.html"><img src="./image/personal.png" alt="">
             <p>我的</p>
         </a></li>
     </ul>
