--- a/shopcart.html
+++ b/shopcart.html
@@ -6,12 +6,12 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta content="telephone=no" name="format-detection">
-    <title>首页</title>
+    <title>Title</title>
     <link rel="stylesheet" href="./css/shopcart.css">
 </head>
 <body>
 <header>
-    <a href=""><img src="./image/xiangzuo.png" alt=""></a>
+    <a href="personal.html"><img src="./image/xiangzuo.png" alt=""></a>
     <span>购物车</span>
     <a href=""></a>
 </header>
@@ -34,7 +34,7 @@
 <div class="end">
     <div class="end-left"><span>合计</span><span>¥ 162</span></div>
     <span class="end-span">运费¥20&nbsp;&nbsp;&nbsp;已优惠¥20</span>
-    <div class="end-right"><a href=""><img src="./image/0054.png" alt=""><span>结算</span></a></div>
+    <div class="end-right"><a href="./zhifufangshi.html"><img src="./image/0054.png" alt=""><span>结算</span></a></div>
 
 </div>
 </body>
