--- a/slzh.html
+++ b/slzh.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 <header>
-    <a href=""><img src="./image/xiangzuo.png" alt=""></a>
+    <a href="./index.html"><img src="./image/xiangzuo.png" alt=""></a>
     <span>水路综合</span>
     <a href=""></a>
 </header>
@@ -32,7 +32,7 @@
 <div class="middle">
     <div class="one">
         <div class="left">
-            <img src="./image/104.png" alt="">
+            <a href="./spxq.html"><img src="./image/104.png" alt=""></a>
         </div>
         <div class="right">
             <h2>龙头维修</h2>
@@ -43,8 +43,56 @@
                 </ul>
             </div>
             <div class="right-two">
-                <div><span>非常专业</span></div>
-                <div><span>价格合理</span></div>
+                <div>非常专业</div>
+                <div>价格合理</div>
+            </div>
+            <div class="right-three">
+                <span>已售 68</span>
+                <span>60元 定金</span>
+            </div>
+        </div>
+    </div>
+    <div class="one">
+        <div class="left">
+            <a href="./spxq.html"><img src="./image/104.png" alt=""></a>
+        </div>
+        <div class="right">
+            <h2>龙头维修</h2>
+            <div class="right-one">
+                <ul>
+                    <li>评分<span>5.0</span></li>
+                    <li>接单率<span>100%</span></li>
+                </ul>
+            </div>
+            <div class="right-two">
+                <div>非常专业</div>
+                <div>价格合理</div>
+            </div>
+            <div class="right-three">
+                <span>已售 68</span>
+                <span>60元 定金</span>
+            </div>
+        </div>
+    </div>
+    <div class="one">
+        <div class="left">
+            <a href="./spxq.html"><img src="./image/104.png" alt=""></a>
+        </div>
+        <div class="right">
+            <h2>龙头维修</h2>
+            <div class="right-one">
+                <ul>
+                    <li>评分<span>5.0</span></li>
+                    <li>接单率<span>100%</span></li>
+                </ul>
+            </div>
+            <div class="right-two">
+                <div>非常专业</div>
+                <div>价格合理</div>
+            </div>
+            <div class="right-three">
+                <span>已售 68</span>
+                <span>60元 定金</span>
             </div>
         </div>
     </div>
