--- a/spxq.html
+++ b/spxq.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 <header>
-    <a href="./page1.html"><img src="./image/xiangzuo.png" alt=""></a>
+    <a href="./dianpu.html"><img src="./image/xiangzuo.png" alt=""></a>
     <p>商品详情</p>
     <a href=""><img src="" alt=""></a>
 </header>
@@ -88,7 +88,7 @@
     <ul>
         <li><img src="./image/007.png" alt=""><span>商铺</span></li>
         <li><img src="./image/008.png" alt=""><span>联系商家</span></li>
-        <li><img src="./image/102.png" alt=""></li>
+        <li><a href="shopcart.html"><img src="./image/102.png" alt=""></a></li>
         <li><img src="./image/101.png" alt=""></li>
     </ul>
 </footer>
